Fixed mobile site overflow

--- a/content.css
+++ b/content.css
@@ -4,9 +4,7 @@ html, body {
 	overflow-x: hidden;
 	background-color: rgb(135, 54, 0);
 }
-div{
-	overflow-x: hidden;
-}
+
 
 .cell{
 	color: rgb(180,180,180);
